# FotoCasa

./: .gitignore  Cargo.toml  README.md  iniciar_fotocasa.bat  parar_fotocasa.bat
src/: main.rs
static/: app.js  index.html  style.css
